--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
